[workspace.package]
version = "2.13.0"
authors = ["Andrey Fedotov  <splashgitar@gmail.com>", "Alexey Vishnyakov <pmvishnya@gmail.com>", "Georgy Savidov <avgor46@ispras.ru>", "Ilya Yegorov <Yegorov_Ilya@ispras.ru>", "Darya Parygina <pa_darochek@ispras.ru>"]

[workspace]
resolver = "2"
members = ["casr", "libcasr"]

[profile.release]
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
