[package]
name = "casr"
authors = ["Andrey Fedotov  <fedotoff@ispras.ru>", "Alexey Vishnyakov <vishnya@ispras.ru>", "Georgy Savidov <avgor46@ispras.ru>"]
version = "2.5.1"
description = "Collect crash reports, triage, and estimate severity."
keywords = ["gdb", "crash", "stacktrace", "triage", "coredump"]
readme = "../README.md"
repository = "https://github.com/ispras/casr.git"
edition = "2021"
license = "Apache-2.0"
exclude = ["/tests"]

[dependencies]
anyhow = "1.0"
clap = "3.2"
chrono =  "0.4"
goblin = "0.6"
log = "0.4"
simplelog = "0.12"
cursive = { version = "0.20", default-features = false, features = ["termion-backend"] }
cursive_tree_view = "0.8"
gdb-command = "0.7"
nix = "0.26"
rayon = "1.7"
num_cpus = "1.15"
linux-personality = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
libc = "0"

libcasr = { path = "../libcasr", version = "2.5.1", features = ["serde", "exploitable"] }

[dev-dependencies]
lazy_static = "1.4"
