[package]
name = "casr"
authors = ["Andrey Fedotov  <splashgitar@gmail.com>", "Alexey Vishnyakov <pmvishnya@gmail.com>", "Georgy Savidov <avgor46@ispras.ru>", "Ilya Yegorov <Yegorov_Ilya@ispras.ru>"]
version = "2.11.0"
description = "Collect crash reports, triage, and estimate severity."
keywords = ["gdb", "crash", "stacktrace", "triage", "coredump"]
readme = "../README.md"
repository = "https://github.com/ispras/casr.git"
edition = "2021"
license = "Apache-2.0"
exclude = ["/tests"]

[dependencies]
shell-words = "1.1"
anyhow = "1.0"
clap = { version = "4.2", features = ["wrap_help", "cargo", "env"] }
chrono =  "0.4"
goblin = "0.6"
log = "0.4"
simplelog = "0.12"
cursive = { version = "0.20", default-features = false, features = ["termion-backend"] }
cursive_tree_view = "0.8"
gdb-command = "0.7"
nix = "0.26"
rayon = "1.7"
num_cpus = "1.15"
is_executable = "1.0"
linux-personality = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
libc = "0"
walkdir = "2"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"], default_features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
toml = { version = "0.7", optional = true }
wait-timeout = "0.2"
which = "4.4"

libcasr = { path = "../libcasr", version = "2.11.0", features = ["serde", "exploitable"] }

[features]
dojo = ["dep:reqwest", "dep:tokio", "dep:toml"]

[package.metadata.docs.rs]
features = ["dojo"]

[[bin]]
name = "casr-dojo"
required-features = ["dojo"]

[dev-dependencies]
lazy_static = "1.4"
