[package]
name = "casr"
authors = ["Andrey Fedotov  <splashgitar@gmail.com>", "Alexey Vishnyakov <pmvishnya@gmail.com>", "Georgy Savidov <avgor46@ispras.ru>", "Ilya Yegorov <Yegorov_Ilya@ispras.ru>"]
version = "2.12.1"
description = "Collect crash reports, triage, and estimate severity."
keywords = ["gdb", "crash", "stacktrace", "triage", "coredump"]
readme = "../README.md"
repository = "https://github.com/ispras/casr.git"
edition = "2024"
license = "Apache-2.0"
exclude = ["/tests"]

[dependencies]
shell-words = "1.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["wrap_help", "cargo", "env"] }
chrono =  "0.4"
goblin = "0.8"
log = "0.4"
simplelog = "0.12"
cursive = { version = "0.21", default-features = false, features = ["termion-backend"] }
cursive_tree_view = "0.9"
gdb-command = "0.7"
nix = "0.26"
rayon = "1.10"
num_cpus = "1.16"
is_executable = "1.0"
linux-personality = "2.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
libc = "0"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
toml = { version = "0.8", optional = true }
wait-timeout = "0.2"
which = "6.0"
copy_dir = "0.1"

libcasr = { path = "../libcasr", version = "2.12.1", features = ["serde", "exploitable"] }

[features]
dojo = ["dep:reqwest", "dep:tokio", "dep:toml"]

[package.metadata.docs.rs]
features = ["dojo"]

[[bin]]
name = "casr-dojo"
required-features = ["dojo"]

[dev-dependencies]
lazy_static = "1.4"
lsb_release = "0.1"
