[package]
name = "libcasr"
authors = ["Andrey Fedotov  <splashgitar@gmail.com>", "Alexey Vishnyakov <pmvishnya@gmail.com>", "Georgy Savidov <avgor46@ispras.ru>", "Ilya Yegorov <Yegorov_Ilya@ispras.ru>", "Darya Parygina <pa_darochek@ispras.ru>"]
version = "2.11.0"
description = "Collect crash reports, triage, and estimate severity."
keywords = ["gdb", "crash", "stacktrace", "triage", "coredump"]
readme = "../README.md"
repository = "https://github.com/ispras/casr.git"
documentation = "https://docs.rs/libcasr"
edition = "2021"
license = "Apache-2.0"
exclude = ["/fuzz"]

[dependencies]
regex = "1"
lazy_static = "1.4"
goblin = { version = "0.6", optional = true }
capstone = { version = "0.11", optional = true }
chrono =  "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
lexiclean = { version = "0.0", optional = true }
gdb-command = "0.7"
thiserror = "1.0"
kodama = "0.3"

[features]
exploitable = ["dep:capstone", "dep:goblin"]
serde = ["dep:serde_json", "dep:serde", "dep:lexiclean"]

[package.metadata.docs.rs]
features = ["exploitable", "serde"]
